Update Urbit to v1.21 (#427)
Co-authored-by: NativePlanet CICD <mgmt@nativeplanet.io>

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.20"
+version: "v1.21"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,6 +35,12 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Adds the %meme debug hint, resolves segfaults on macos-aarch64 builds, and adds a new --replay option.
+  Offline event log truncation (chop), eval improvements, support for
+  clangd language server processing, and various fixes/upgrades to CI and
+  documentation.
   
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.20
+  
+  There are no breaking changes or Kelvin decrements in this release.
+
+
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.21
