Updated Urbit to v1.22

--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.21"
+version: "v1.22"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,12 +35,7 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Offline event log truncation (chop), eval improvements, support for
-  clangd language server processing, and various fixes/upgrades to CI and
-  documentation.
-  
-  
-  There are no breaking changes or Kelvin decrements in this release.
+  Various small improvements and bug fixes.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.21
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.22
