update version and release notes

--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: samourai-server
 category: Wallet Servers
 name: Samourai Server
-version: "1.16.1-hotfix-2"
+version: "1.16.1-hotfix-3"
 tagline: Your private backing server for Samourai Wallet
 description: >-
   Samourai Server is an exclusive Umbrel app that runs Samourai Dojo
@@ -32,6 +32,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  Fix remote access via Tor
+  This update fixes a bug where users could not connect using Whirlpool GUI
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/461
