--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -32,3 +32,6 @@ services:
       LNBITS_DEFAULT_WALLET_NAME: "LNbits wallet"
       LNBITS_DISABLED_EXTENSIONS: "amilk"
       LNBITS_ADMIN_EXTENSIONS: "ngrok"
+      
+      # Cashu
+      CASHU_PRIVATE_KEY: ${APP_SEED}
