--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: Finance
 name: Ghostfolio
-version: "1.231.0"
+version: "1.241.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -32,3 +32,55 @@ deterministicPassword: false
 torOnly: false
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
+releaseNotes: >
+  This release updates Ghostfolio from 1.231.0 to 1.241.0.
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.231.0 and 1.241.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
+    
+  Version 1.241.0 release notes:
+  
+  Added
+
+  - Supported a manual currency for the activity unit price
+  
+  - Added COINGECKO as a new data source type
+  
+  - Added support for data provider information to the position detail dialog
+  
+  - Added support to export accounts
+  
+  - Added suport to import accounts
+
+
+  Changed
+
+  - Filtered activities with type ITEM from search results
+  
+  - Increased the file size limit for the activities import
+  
+  - Improved the style of the search results for symbols
+  
+  - Beautified the ETF names in the asset profile
+  
+  - Removed the data source type GHOSTFOLIO
+  
+  - Improved the usability of the Import Activities... action
+  
+  - Improved the styling in the admin control panel
+  
+  - Improved the language localization for German (de)
+
+
+  Fixed
+
+  - Fixed RangeError: Maximum call stack size exceeded for values of type Big in the value redaction interceptor for the impersonation mode
+
+  - Reset the letter spacing in buttons
+
+  - Fixed an issue with exact matches in the activities table filter (VT vs. VTI)
+  
+  - Fixed an issue in the data gathering service (do not skip MANUAL data source)
+  
+  - Fixed an issue in the data gathering service (do not skip MANUAL data source)
+  
+  - Fixed the buying power calculation if no emergency fund is set but an activity is tagged as Emergency Fund
