modify release notes

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -25,11 +25,9 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  - Fixed a bug where token balance detection for EVM tokens with many addresses may not have worked properly.
-  
-  -Fixes bug where an error message is not shown when some input filled with incorrect value.
-  
-  -Fixes bug where Maker Vault Collateralization Ratio can't be edited in watcher form.
+  Rotki v1.27.1 is a patch release with minor bug fixes and new features.
+  Most importantly it fixes the accounting bug with the Average cost basis setting (used in UK and Canada),
+  introduces automatic detection of maker DAO vault collateral types and more!
 
   
   Full changelog can be found here: https://github.com/rotki/rotki/releases/tag/v1.27.1
