--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: Finance
 name: Ghostfolio
-version: "1.231.0"
+version: "1.241.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -30,5 +30,20 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+releaseNotes: >
+  This release updates Ghostfolio from 1.231.0 to 1.241.0.
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.231.0 and 1.241.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
+    
+  Version 1.241.0 release notes:
+
+  - Filtered activities with type ITEM from search results
+
+  - Considered the user's language in the Stripe checkout
+
+  - Upgraded the Stripe dependencies
+
+  - Upgraded twitter-api-v2 from version 1.10.3 to 1.14.2
+  
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
