--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: pi-hole
 category: Networking
 name: Pi-hole
-version: "2023.02.2"
+version: "2023.02.2-dhcp"
 tagline: Block ads on your entire network
 description: >-
   Instead of browser plugins or other software on each computer,
