add release notes

--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -20,5 +20,18 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
+releaseNotes: >-
+  Updates ESPHome from version 2022.6.2 to 2023.2.4. A full list of new features, new component support, breaking changes, and bug fixes for versions 
+  between 2022.6.2 and 2023.2.4 can be found here: https://github.com/esphome/esphome/releases.
+
+  Version 2023.2.4 release notes:
+
+
+  - BL0939 state_class set for energy sensors
+
+  - fix wiegand tag parity
+
+  - Fix multiple remote_receivers with triggers esphome#4477 by @jesserockz
+
 submitter: ShonP40
 submission: https://github.com/getumbrel/umbrel-apps/pull/43
