minor release note change

--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -21,11 +21,11 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  Updates ESPHome from version 2022.6.2 to 2023.2.4. A full list of new features, new component support, breaking changes, and bug fixes for versions 
+  This release updates ESPHome from version 2022.6.2 to 2023.2.4. A full list of new features, new component support, breaking changes, and bug fixes for versions 
   between 2022.6.2 and 2023.2.4 can be found here: https://github.com/esphome/esphome/releases.
 
-  Version 2023.2.4 release notes:
 
+  Version 2023.2.4 release notes:
 
   - BL0939 state_class set for energy sensors
 
