--- a/specter-desktop/docker-compose.yml
+++ b/specter-desktop/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     command:
       - --host=0.0.0.0
       - --specter-data-folder=/data
+      - --devstatus-threshold=beta
     environment:
       # TODO: APP_PASSWORD
       BTC_RPC_USER: $APP_BITCOIN_RPC_USER
