update release notes

--- a/pi-hole/umbrel-app.yml
+++ b/pi-hole/umbrel-app.yml
@@ -32,6 +32,7 @@ deterministicPassword: true
 torOnly: false
 releaseNotes: >-
   By popular request of the Umbrel Community, this update adds the ability to use Pi-hole as your DHCP server!
+  See Pi-hole documentation here for setting up DHCP with bridge networking: https://docs.pi-hole.net/docker/dhcp/
 
 
   This update does not include any changes the versions of the Pi-hole components: Core v5.15.5, FTL v5.21, and AdminLTE v5.18.4
