--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -1,4 +1,4 @@
-manifestVersion: 1.1
+manifestVersion: 1
 id: octoprint
 category: Networking
 name: OctoPrint
@@ -6,21 +6,23 @@ version: "1.8.7"
 tagline: The snappy web interface for your 3D printer.
 description: >-
   OctoPrint provides a snappy web interface for controlling consumer 3D printers.
+releaseNotes: >-
+  Improvements
+   Add support for Python 3.11 by bumping up the version of a dependency.
+  Bug fixes
+    Do not send None to Locale.parse if no match can be made between the request's accepted languages and the installed languages. Fixes a 500 server error on the API in case of Babel being at of version of 2.12 or higher.
 developer: OctoPrint
 website: https://octoprint.org/
 repo: https://github.com/OctoPrint/OctoPrint
 support: https://github.com/OctoPrint/OctoPrint/issues
 port: 5000
+submitter: OctoPrint
+submission: https://github.com/getumbrel/umbrel-apps/pull/449
 gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
+dependencies: []
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-releaseNotes: >
-  - Notification when a lightning channel is opened
-  - Notification when a lightning channel is closed
-  - Notification on payment forwarding
-submitter: OctoPrint
-submission: https://github.com/getumbrel/umbrel-apps/pull/449
