--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -11,4 +11,6 @@ services:
     image: octoprint/octoprint:1.8.7
     volumes:
       - ${APP_DATA_DIR}/data:/data
+    devices:
+      - "/dev/ttyACM0:/dev/ttyACM0"
     restart: on-failure
