--- a/octoprint/docker-compose.yml
+++ b/octoprint/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     image: octoprint/octoprint:1.8.7
     volumes:
       - ${APP_DATA_DIR}/data:/data
+      - ${UMBREL_ROOT}/octoprint:/octoprint
     devices:
       - "/dev/ttyACM0:/dev/ttyACM0"
     restart: on-failure
