--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     environment:
       APP_HOST: urbit_manager_1
       APP_PORT: 8090
+    PROXY_AUTH_ADD: "false"
   
   manager:
     image: mopfelwinrux/urbit-umbrel:v1.22@sha256:fd6303520a4ef3dec9be223b099af6a2299810a277b921e574e135a96a2eb39f
