--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: syncthing
 category: Files
 name: Syncthing
-version: "1.23.1"
+version: "1.23.2"
 tagline: Peer-to-peer file synchronization between your devices
 description: >-
   Syncthing is a peer-to-peer continuous file synchronization
@@ -27,7 +27,17 @@ path: ""
 defaultPassword: ""
 releaseNotes: >-
   Bugfixes:
+
+  - Relay listener does not restart sometimes
+ 
+  Enhancements:
+
+  - GUI editor for xattr filter patterns
   
-  - "accept: function not implemented" after upgrading to syncthing v1.20.1
+  - gui: Remove duplicate Spanish translation
+  
+  Other issues:
+
+  - Update quic-go for Go 1.20
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
