--- a/ord/docker-compose.yml
+++ b/ord/docker-compose.yml
@@ -10,7 +10,7 @@ services:
   ord:
     # add mult-arch sha256 when available
     image: nmfretz/ord:v0.5.1
-    user: "1000:1000"
+    # user: "1000:1000"
     restart: on-failure
     command: "--first-inscription-height 770112 --data-dir /var/lib/ord --bitcoin-data-dir /var/lib/bitcoind --rpc-url ${APP_BITCOIN_NODE_IP}:${APP_BITCOIN_RPC_PORT} --chain ${APP_BITCOIN_NETWORK} server --http"
     volumes:
