--- a/ord/umbrel-app.yml
+++ b/ord/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: ord
 category: Explorers
-name: Ordinal Inscription Explorer
+name: Ordinals
 version: "0.5.1"
 tagline: Trustlessly view Ordinal inscriptions
 description: >
