update app description

--- a/ord/umbrel-app.yml
+++ b/ord/umbrel-app.yml
@@ -5,7 +5,11 @@ name: Ordinals
 version: "0.5.1"
 tagline: Trustlessly view Ordinal inscriptions
 description: >
-  ...
+  A block explorer to trustlessly view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
+
+  Simply install the app and wait for Ordinals to connect to your Bitcoin node and index inscriptions.
+
+  Disclaimer: The Ordinals app does not control, filter, or moderate the content hosted on the Bitcoin blockchain. Consequently, you may come across NSFW (Not Safe For Work), objectionable, or unlawful material while using the app.
 releaseNotes: ""
 developer: Casey Rodarmor
 website: https://ordinals.com/
