update ord --> ordinals and update tagline

--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -1,9 +1,9 @@
 manifestVersion: 1
-id: ord
+id: ordinals
 category: Explorers
 name: Ordinals
 version: "0.5.1"
-tagline: Trustlessly view Ordinal inscriptions
+tagline: Trustlessly view Ordinal inscriptions using your Bitcoin node.
 description: >
   A block explorer to trustlessly view Ordinal inscriptions. Search blocks, transactions, outputs, and individual satoshis.
 
