--- a/ordinals/docker-compose.yml
+++ b/ordinals/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: ord_ord_1
+      APP_HOST: ordinals_ord_1
       APP_PORT: 80
       PROXY_AUTH_ADD: "false"
 
