--- a/ordinals/umbrel-app.yml
+++ b/ordinals/umbrel-app.yml
@@ -28,4 +28,4 @@ path: ""
 deterministicPassword: false
 torOnly: false
 submitter: Umbrel
-submission: https://TODO.com
+submission: https://github.com/getumbrel/umbrel-apps/pull/458
