modify release notes

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -26,18 +26,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >-
-  Bugfixes:
-
-  - Relay listener does not restart sometimes
- 
-  Enhancements:
-
-  - GUI editor for xattr filter patterns
-  
-  - gui: Remove duplicate Spanish translation
-  
-  Other issues:
-
-  - Update quic-go for Go 1.20
+  This minor release includes bug fixes and enhancements.
+  A full list of changes from the previous version can be found here: https://github.com/syncthing/syncthing/releases/tag/v1.23.2
 submitter: Sam Cymbaluk
 submission: https://github.com/getumbrel/umbrel/pull/1092
