--- a/snort/docker-compose.yml
+++ b/snort/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       APP_PORT: 80
 
   web:
-    image: ghcr.io/v0l/snort:v0.1.4
+    image: ghcr.io/v0l/snort:v0.1.4@sha256:734f74393e2560e625bad9e2485ccccfa6af53caab64a67d971380244cfc54dd
     init: true
