update snort gallery extensions

--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -29,9 +29,9 @@ repo: https://github.com/v0l/snort
 support: https://t.me/snort_social
 port: 52027
 gallery:
-  - 1.png
-  - 2.png
-  - 3.png
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 path: ""
 defaultUsername: ""
 defaultPassword: ""
