update snort submitter

--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -35,5 +35,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: v0l
+submitter: Snort
 submission: https://github.com/getumbrel/umbrel-apps/pull/411
