--- a/passky-server/umbrel-app.yml
+++ b/passky-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: passky-server
 category: Password Managers
 name: Passky Server
-version: "8.1.2"
+version: "8.1.4"
 tagline: Simple, modern, lightweight, open source and secure password manager
 description: >-
   With Passky, you can easily and securely store all of your passwords in one place.
@@ -28,5 +28,8 @@ gallery:
 path: ""
 defaultUsername: admin
 deterministicPassword: true
+releaseNotes: >
+  This release includes minor bug fixes and updates.
+  A full list of changes from the previous version can be found here: https://github.com/Rabbit-Company/Passky-Server/tags
 submitter: Rabbit Company LLC
 submission: https://github.com/getumbrel/umbrel-apps/pull/384
