--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: immich
 category: Files
 name: Immich
-version: "v1.40.1_63-dev"
+version: "v1.50.1"
 tagline: High performance photo and video backup solution
 description: >-
   An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
@@ -55,5 +55,5 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-submitter: levma
+submitter: zixoff
 submission: https://github.com/getumbrel/umbrel-apps/pull/239
