immich release original 1

--- a/immich/.env
+++ b/immich/.env
@@ -28,7 +28,7 @@ REDIS_HOSTNAME=immich_redis
 # This is the location where uploaded files are stored.
 ###################################################################################
 
-UPLOAD_LOCATION=./data
+UPLOAD_LOCATION=/home/zix/umbrel/app-data/immich/data/upload
 
 ###################################################################################
 # Reverse Geocoding
