--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -172,8 +172,8 @@ services:
 #      # Make sure these values get passed through from the env file
 #      - IMMICH_SERVER_URL
 #      - IMMICH_WEB_URL
-    ports:
-      - 2283:8080
+#    ports:
+#      - 2283:8080
 #    logging:
 #      driver: none
 #    depends_on:
