--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -158,7 +158,17 @@ services:
 #    volumes:
 #      - pgdata:/var/lib/postgresql/data
 #    restart: always
-
+  typesense:
+    container_name: immich_typesense
+    image: typesense/typesense:0.24.0
+    environment:
+      - TYPESENSE_API_KEY=${TYPESENSE_API_KEY}
+      - TYPESENSE_DATA_DIR=/data
+    logging:
+      driver: none
+    volumes:
+      - ${APP_DATA_DIR}/data/typesense:/data
+  
   proxy:
     container_name: immich_proxy
     image: altran1502/immich-proxy:release
