--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     depends_on:
       - redis
       - postgres
+      - typesense
     restart: on-failure
 #    volumes:
 #      - ${UPLOAD_LOCATION}:/usr/src/app/upload
@@ -61,6 +62,7 @@ services:
     depends_on:
       - redis
       - postgres
+      - typesense
     restart: on-failure
 
 #    volumes:
@@ -162,7 +164,7 @@ services:
     container_name: immich_typesense
     image: typesense/typesense:0.24.0
     environment:
-      - TYPESENSE_API_KEY=${TYPESENSE_API_KEY}
+      - TYPESENSE_API_KEY=${APP_IMMICH_TYPESENSE_API_KEY}
       - TYPESENSE_DATA_DIR=/data
     logging:
       driver: none
