--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -164,7 +164,7 @@ services:
     container_name: immich_typesense
     image: typesense/typesense:0.24.0
     environment:
-      - TYPESENSE_API_KEY=${APP_IMMICH_TYPESENSE_API_KEY}
+      - TYPESENSE_API_KEY=some-random_text
       - TYPESENSE_DATA_DIR=/data
     logging:
       driver: none
