--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: ghcr.io/immich-app/immich-server:release
     entrypoint: [ "/bin/sh", "./start-server.sh" ]
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
     env_file:
-      - .env
+      - exports.sh
     environment:
       - NODE_ENV=production
     depends_on:
@@ -22,9 +22,9 @@ services:
     image: ghcr.io/immich-app/immich-server:release
     entrypoint: [ "/bin/sh", "./start-microservices.sh" ]
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
+      - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
     env_file:
-      - .env
+      - exports.sh
     environment:
       - NODE_ENV=production
     depends_on:
@@ -37,10 +37,10 @@ services:
     container_name: immich_machine_learning
     image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
-      - ${UPLOAD_LOCATION}:/usr/src/app/upload
-      - model-cache:/cache
+      - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
+      - {APP_DATA_DIR}/model-cache:/cache
     env_file:
-      - .env
+      - exports.sh
     environment:
       - NODE_ENV=production
     restart: always
@@ -50,7 +50,7 @@ services:
     image: ghcr.io/immich-app/immich-web:release
     entrypoint: [ "/bin/sh", "./entrypoint.sh" ]
     env_file:
-      - .env
+      - exports.sh
     restart: always
 
   typesense:
@@ -62,7 +62,7 @@ services:
     logging:
       driver: none
     volumes:
-      - tsdata:/data
+      - {APP_DATA_DIR}/tsdata:/data
 
   redis:
     container_name: immich_redis
@@ -73,14 +73,14 @@ services:
     container_name: immich_postgres
     image: postgres:14
     env_file:
-      - .env
+      - exports.sh
     environment:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_DB: ${DB_DATABASE_NAME}
       PG_DATA: /var/lib/postgresql/data
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - {APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
     restart: always
 
   immich-proxy:
@@ -98,7 +98,7 @@ services:
       - immich-server
     restart: always
 
-volumes:
-  pgdata:
-  model-cache:
-  tsdata:
+#volumes:
+#  pgdata:
+#  model-cache:
+#  tsdata:
