--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     image: ghcr.io/immich-app/immich-machine-learning:release
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
-      - {APP_DATA_DIR}/model-cache:/cache
+      - ${APP_DATA_DIR}/model-cache:/cache
     env_file:
       - exports.sh
     environment:
