add release notes

--- a/plex/umbrel-app.yml
+++ b/plex/umbrel-app.yml
@@ -25,5 +25,7 @@ defaultPassword: ""
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
+releaseNotes: >-
+  This update includes new features such as improved series and season-level preferences, increased support for different naming formats, and numerous bug fixes.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/commit/60878f278d544b204d8e7c96240c797f43a9b319
