--- a/urbit/docker-compose.yml
+++ b/urbit/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     environment:
       APP_HOST: urbit_manager_1
       APP_PORT: 8090
-    PROXY_AUTH_ADD: "false"
+      PROXY_AUTH_ADD: "false"
   
+  manager:
     image: mopfelwinrux/urbit-umbrel:v2.0@sha256:5c628df5007e3c3e8320b6e3f2e97a120e5a448ab5821bbe5fb21c922d64d3e4
-    image: mopfelwinrux/urbit-umbrel:v1.22@sha256:fd6303520a4ef3dec9be223b099af6a2299810a277b921e574e135a96a2eb39f
     ports:
       - "34343:34343"
     volumes:
