--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.22"
+version: "v2.0"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,7 +35,10 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Various small improvements and bug fixes.
+  8GB loom has landed, which you can use by adding --loom 33 to your normal boot command. Additionally, comets can now only be booted with the -c flag, the strange page issue is fixed, --cue is added to urbit eval, and authentication requests are checked using eyre's tokens.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.22
+  Please note that this release is backwards-incompatible with previous versions, which means that if you boot your ship with vere-v2.0 (this release), you will NOT be able to use older versions afterwards.
+
+
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.0
