--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -116,7 +116,7 @@ services:
       - POSTGRES_PASSWORD="postgres"
       - POSTGRES_USER="postgres"
       - POSTGRES_DB="iimich"
-      - PG_DATA: /var/lib/postgresql/data
+      PG_DATA: /var/lib/postgresql/data
     volumes:
       - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
     restart: always
