--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -110,13 +110,13 @@ services:
   database:
     container_name: immich_postgres
     image: postgres:14
-    env_file:
-      - exports.sh
+#    env_file:
+#      - exports.sh
     environment:
       - POSTGRES_PASSWORD="postgres"
       - POSTGRES_USER="postgres"
       - POSTGRES_DB="iimich"
-      PG_DATA: /var/lib/postgresql/data
+      - PG_DATA="/var/lib/postgresql/data"
     volumes:
       - ${APP_DATA_DIR}/pgdata:/var/lib/postgresql/data
     restart: always
